# temporary

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  stack.yaml  temporary.cabal
Distribution/Compat/: TempFile.hs
System/IO/: Temp.hs
tests/: test.hs
