name:                temporary
version:             1.2.0.4
cabal-version:       >= 1.10
synopsis:            Portable temporary file and directory support
description:         Functions for creating temporary files and directories.
category:            System, Utils
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2003-2006, Isaac Jones
                     (c) 2005-2009, Duncan Coutts
author:              Isaac Jones <ijones@syntaxpolice.org>
                     Duncan Coutts <duncan@haskell.org>
maintainer:          Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>, Roman Cheplyaka <roma@ro-che.info>
homepage:            http://www.github.com/feuerbach/temporary
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/feuerbach/temporary.git

Library
    default-language:
      Haskell2010
    exposed-modules: System.IO.Temp
    build-depends:   base >= 3 && < 10, filepath >= 1.1, directory >= 1.0,
                     transformers >= 0.2.0.0, exceptions >= 0.6
    ghc-options:     -Wall
    
    if !os(windows)
        build-depends: unix >= 2.3

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4.3 && < 5
    , unix
    , directory
    , tasty
    , tasty-hunit
    , temporary
